# SpaceWars

./: CMakeLists.txt
resources/models/: meteor_1.vox  meteor_2.vox  plus.vox  rocket.vox  star.vox
src/: bot.cpp  bot.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.h  game_physics.h  geometry.cpp  geometry.h  main.cpp  objects_graphic.h  physic_object.cpp  physic_object.h  player.cpp  player.h
src/graphic_engine/: background.cpp  background.h  framebuffer.cpp  framebuffer.h  graphic_engine.cpp  graphic_engine.h  i_drawable.h  image_loader.cpp  image_loader.h  object_model.cpp  object_model.h  render_buffer.h  shader_program.cpp  shader_program.h  text_render.cpp  text_render.h  texture.cpp  texture.h  uniform_object.cpp  uniform_object.h  uniform_structures.h  user_input_handler.cpp  user_input_handler.h  viewport.cpp  viewport.h  voxel.cpp  voxel.h  voxexporter.cpp  voxexporter.h
src/graphic_engine/shaders/: fragment_background.glsl  vertex_background.glsl  vertex_instancing.glsl
